:bug: Fix weird gap in modal cards

--- a/source/styles/partials/_component.card.scss
+++ b/source/styles/partials/_component.card.scss
@@ -8,6 +8,7 @@
   display: inline-block;
   overflow: hidden;
   text-align: left;
+  vertical-align: top;
   background-color: $white;
   border: 1px solid $ui-dark;
   border-radius: $base-radius;
